kubernetes/apps/longhorn/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  parentRefs:
    - name: eg-private
      namespace: envoy-gateway-system
      sectionName: https-admin
  hostnames:
    - "longhorn.admin.michaelmuzafarov.dev"
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
